RI-7401: fix broken layout for size, length, ttl layout

--- a/redisinsight/ui/src/pages/browser/modules/key-details-header/styles.module.scss
+++ b/redisinsight/ui/src/pages/browser/modules/key-details-header/styles.module.scss
@@ -62,6 +62,7 @@
 
 .groupSecondLine {
   margin-top: 4px !important;
+  align-items: flex-start !important;
 }
 
 .subtitleActionBtns {
